# iq-loyalty-rkeaper

./: .gitignore  CMakeLists.txt  build.bat.txt  card_info.h  iqloyalty_exports-old.h  iqloyalty_exports.h  lib.cpp  lib.h  main.cpp  transaction.h  types.h  windows_types.h
